logs/turtlesim/build.make.038.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:234:35: error: ‘tr’ was not declared in this scope
   painter.drawText(rectangle2, 0, tr("O"), &boundingRect2);
                                   ^~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:234:35: note: suggested alternative: ‘tm’
   painter.drawText(rectangle2, 0, tr("O"), &boundingRect2);
                                   ^~
                                   tm
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
